matrix/draupnir.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: draupnir
  namespace: matrix
  labels:
    app: draupnir
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: draupnir
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: draupnir
    spec:
      automountServiceAccountToken: false
      containers:
        - name: draupnir
          image: gnuxie/draupnir:v3.1.0@sha256:eb61e8376116393fb1d04e284b22faad5fb0bfb11991ad71b8b60a96b1b1df7e
          args:
            - "bot"
            - "--draupnir-config"
            - "/data/config/production.yaml"
            - "--access-token-path"
            - "/data/secrets/access-token"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/config
            - name: secrets
              mountPath: /data/secrets
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: draupnir-data-pvc
        - name: config
          configMap:
            name: draupnir-config
        - name: secrets
          secret:
            secretName: draupnir-secrets
            items:
              - key: access-token
                path: access-token
