matrix/wellknown.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-wellknown
  namespace: matrix
  labels:
    app: matrix-wellknown
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: matrix-wellknown
  template:
    metadata:
      labels:
        app: matrix-wellknown
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: nginx:alpine@sha256:0530961ff0592b58c10f767535cc0abdfccf9e389ff7cc90f87320c1bc7e8506
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: config
              mountPath: /www/client.json
              subPath: client.json
            - name: config
              mountPath: /www/server.json
              subPath: server.json
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 32Mi
      volumes:
        - name: config
          configMap:
            name: matrix-wellknown
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-wellknown
  namespace: matrix
spec:
  selector:
    app: matrix-wellknown
  ports:
    - port: 8080
      targetPort: 8080
